fixed sendgrid - renamed "name" fields

--- a/BugSmear/Views/Home/Index.cshtml
+++ b/BugSmear/Views/Home/Index.cshtml
@@ -18,6 +18,10 @@ SMEAR is a new acronym for a "Simple Method Ensures Appropriate Resolutions".
 <div>
     <h2>DASHBOARD GOES HERE</h2>
 
-    @Html.ActionLink("List Users", "Users","Admin")
+    <h4>@Html.ActionLink("Users", "Users", "Admin")</h4>
+
+    <h4>@Html.ActionLink("Projects", "Index", "Projects")</h4>
+
+    <h4> @Html.ActionLink("Tickets", "Index", "Tickets")</h4>
 
 </div>}
