--- a/BugSmear/Views/Projects/Index.cshtml
+++ b/BugSmear/Views/Projects/Index.cshtml
@@ -1,14 +1,7 @@
 ﻿@model IEnumerable<BugSmear.Models.Project>
-
-@{
-    ViewBag.Title = "Projects";
-}
-
+@{ViewBag.Title = "Projects";}
 <h2>Projects</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<p>@Html.ActionLink("Create New", "Create")</p>
 <table class="table">
     <tr>
         <th>
@@ -25,7 +18,9 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id }) |
+            <a href="/ProjectUsers/AssignUsers/@item.Id">Assign Users</a> |
+            <a href="/ProjectUsers/RemoveUsers/@item.Id">Remove Users</a> 
         </td>
     </tr>
 }
