--- a/BugSmear/Views/Tickets/Edit.cshtml
+++ b/BugSmear/Views/Tickets/Edit.cshtml
@@ -65,14 +65,6 @@
                 @Html.ValidationMessageFor(model => model.TicketStatusId, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.OwnerUser, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OwnerUser.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OwnerUserId, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
         @*--------------------------------------------------------------------------------------------------------------*@
         <div class="form-group">
             @Html.LabelFor(model => model.OwnerUserId, "OwnerUser", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -81,7 +73,6 @@
                 @Html.ValidationMessageFor(model => model.OwnerUserId, "", new { @class = "text-danger" })
             </div>
         </div>
-        @*--------------------------------------------------------------------------------------------------------------*@
         @*--------------------------------------------------------------------------------------------------------------*@
         <div class="form-group">
             @Html.LabelFor(model => model.AssignedToUserId, "AssignedToUser", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -100,8 +91,6 @@
             </div>
         </div>
         @*--------------------------------------------------------------------------------------------------------------*@
-
-
         <div class="form-group">
             @Html.LabelFor(model => model.EstHours, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -125,6 +114,24 @@
         </div>
     </div>
 }
+
+
+<div class="row">
+    <h2>Current Attachments:</h2>
+    @foreach (var ta in Model.TicketAttachments)
+    {
+        <div>
+            <img class="img-responsive" src="@ta.FileUrl" />
+            <p> @ta.FileUrl </p>
+            <div class="form-actions no-color">
+                <input type="submit" value="RemoveAttachment" class="btn btn-default" />
+            </div>
+        </div>
+        <hr />
+    }
+</div>
+
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
