--- a/BugSmear/Views/Account/Login.cshtml
+++ b/BugSmear/Views/Account/Login.cshtml
@@ -44,10 +44,13 @@
                 <p>
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
-                 //Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>
+                //Enable this once you have account confirmation enabled for password reset functionality
+                <p>
+                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                </p>
+                <h2>
+                    or you can @Html.ActionLink("Login as Guest", "GuestLogin")
+                </h2>
             }
         </section>
     </div>
